--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -65,21 +65,25 @@ body {
 .banner {
   height: var(--tamanho-banner);
   color: white;
-  background-image: url('../assets/imgs/bg-jelly-fish-para-home.png');
+  background-image: url('../assets/imgs/indexFundo6.png');
   background-size: cover;
+  /* display: flex; */
+  /* align-items: center; */
 }
 
 .banner .container {
-  justify-content: left;
-  align-items: center;
+  justify-content: center;
+  align-items: last baseline;
   height: 100%;
+  text-align: center;
+  font-weight: 600;
 }
 
 .banner .container p {
   width: 50%;
   margin: 0;
   padding: 0;
-  font-size: 36px;
+  font-size: 45px;
 }
 
 .banner .container span {
@@ -141,7 +145,7 @@ body {
 
 .login {
   height: var(--tamanho-login);
-  background-image: url('../assets/imgs/bg-jelly-fish-para-home.png');
+  background-image: url('../assets/imgs/indexFundo6.png');
   background-size: cover;
 }
 
