--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -187,10 +187,11 @@ body {
 }
 
 .formulario input {
-  border: 2px solid #32b9cd;
+  border: 2px solid grey;
   text-align: center;
   border-radius: 10px;
   margin: 0;
+  outline: none;
 }
 
 .formulario select {
