--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -44,7 +44,7 @@ body {
 
 .dash-right .avisos .div-form textarea {
   width: 95%;
-  border: 3px solid #e6005a;
+  border: 3px solid #e63e3e;
   background-color: white;
   border-radius: 5px;
 }
@@ -58,7 +58,7 @@ body {
   font-size: 18px;
   padding: 10px 15px;
   color: white;
-  background-color: #e6005a;
+  background-color: #e63e3e;
   width: 120px;
 }
 
@@ -71,7 +71,7 @@ body {
   font-size: 14px;
   padding: 5px 8px;
   color: white;
-  background-color: #e6005a;
+  background-color: #e63e3e;
   width: 80px;
 }
 
@@ -82,7 +82,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
-  border-bottom: 3px solid #e6005a;
+  border-bottom: 3px solid #e63e3e;
   padding: 20px;
 }
 
@@ -286,7 +286,7 @@ body {
   font-weight: 600;
   font-size: 18px;
   padding: 10px 15px;
-  color: #e6005a;
+  color: #e63e3e;
   background-color: white;
   margin: 5px;
   border-radius: 3px;
@@ -295,11 +295,11 @@ body {
 
 .btn-pink {
   color: white;
-  background-color: #e6005a;
+  background-color: #e63e3e;
 }
 
 .btn-white {
-  color: #e6005a;
+  color: #e63e3e;
   background-color: white;
 
 }
@@ -348,7 +348,7 @@ canvas {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  border-right: 3px solid #32b9cd;
+  border-right: 3px solid white;
   background-color: #212124;
 }
 
@@ -387,7 +387,7 @@ canvas {
 .btn-nav {
   width: 40%;
   color: white;
-  background-color: #e6005a;
+  background-color: #e63e3e;
   border-radius: 5px;
   text-align: center;
   padding: 2% 5%;
@@ -396,14 +396,14 @@ canvas {
 .btn-nav-white {
   width: 40%;
   background-color: white;
-  border: 3px solid #e6005a;
+  border: 3px solid #e63e3e;
   border-radius: 5px;
   text-align: center;
   padding: 2% 5%;
 }
 
 .btn-nav-white h3 {
-  color: #e6005a;
+  color: #e63e3e;
   padding: 0;
   margin: 0;
 }
@@ -433,4 +433,60 @@ canvas {
   top: 40%;
   left: 50%;
   transform: translateX(-50%);
+}
+
+/* CONTAINER PARA QUIZ E SEUS ELEMENTOS */
+
+.quizContainer{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  text-align: center;
+}
+
+.quizContainer h1, h2{
+  color: #e63e3e;
+  font-weight: 900;
+
+}
+
+.questionContainer{
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 100%;
+  height: 20%;
+  padding-bottom: 30px;
+  border-top: 1px solid white;
+}
+
+.questionContainerLast{
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 100%;
+  height: 20%;
+  padding-bottom: 30px;
+  border-top: 1px solid white;
+  margin-bottom: 1px solid white;
+}
+
+.quizContainer h2, 
+.quizContainer span,
+.quizContainer input{
+  color: white;
+  margin-left: 40px;
+}
+
+.quizContainer span{
+  font-size: 20px;
+}
+
+.quizContainer label{
+  color: white;
+}
+
+.sendQuiz{
+  
 }
