--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -488,5 +488,15 @@ canvas {
 }
 
 .sendQuiz{
-  
+  background-color: white;
+  height: 200px;
+}
+
+.sendQuiz button{
+  height: 50px;
+  width: 130px;
+  font-size: 15px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  cursor: pointer;
 }
