--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -522,3 +522,18 @@ canvas {
   color: white;
   font-size: 18px;
 }
+
+.sobreSkate{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  /* justify-content: center; */
+  flex-direction: column;
+  color: white;
+}
+
+.canaisRecomendados a,
+.lojasSkate a{
+  text-decoration: none;
+  color: #e63e3e;
+}
