--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -122,8 +122,8 @@ body {
   position: absolute;
   top: 70px;
   width: 100%;
-  height: 100%;
-  display: flex;
+  height: 89%;
+  display: flex; 
 }
 
 #grafico1{
@@ -133,10 +133,21 @@ body {
 }
 
 .menuGrafico{
-  width: 350px;
+  width: 370px;
   display: flex;
   flex-direction: column;
   column-gap: 50px;
+  /* text-align: center; */
+  align-items: center;
+}
+
+/* Atualização de desing para o menu de navegação */
+
+.menuGrafico button{
+  width: 170px;
+  height: 40px;
+  margin-bottom: 60px;
+  font-size: 20px;
 }
 
 .menuGrafico h2{
