--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -11,6 +11,15 @@ body {
 .label-captura {
   display: flex;
   justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 25px;
+  column-gap: 30px;
+}
+
+.label-captura button{
+  font-size: 20px;
+  background-color: #5c6bc0;
 }
 
 .dash-right .avisos {
