--- a/public/css/dashboards.css
+++ b/public/css/dashboards.css
@@ -137,12 +137,13 @@ body {
 }
 
 #grafico1{
-  margin-left: 50px;
+  margin-left: 370px;
   width: 100%;
   height: 100%;
 }
 
 .menuGrafico{
+  position: fixed;
   width: 370px;
   display: flex;
   flex-direction: column;
@@ -498,6 +499,7 @@ canvas {
   justify-content: center;
   /* padding: 10px 15px; */
   /* margin-bottom: 100px; */
+  margin-right: 10px;
   cursor: pointer;
 }
 
