--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -18,8 +18,13 @@ body {
 .container {
   display: flex;
   width: 80%;
+  margin: auto;
+}
+
+.container-mural {
   /* ajuste de posicionamento de mural de manobras 26/07/2024 */
-  /*margin: auto;*/
+  display: flex;
+  width: 80%;
 }
 
 .header {
